--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,7 @@
   font-family: "Lato-Bold";
   src: url(./assets/fonts/Lato-Bold.ttf);
 }
+
+input[name="publishers"]:checked + span {
+  border: solid #1564f9 2px;
+}
